<resources>
    <string name="app_name">STU-I</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">没有连接到设备</string>
    <string name="bt_not_enabled_leaving">蓝牙没有打开，退出程序中</string>
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">已连接到:</string>
    <string name="title_not_connected">无连接</string>
    <string name="reading">读取中...</string>
    <string name="DEVICE_NO_RESPONE">蓝牙无回应请重连</string>
    <string name="PHONE_HAS_NO_BLUETOOTH">该设备不支持蓝牙，强制退出</string>
    <string name="PRESS_AGAIN_EXIT">再按一次退出程序</string>
    <string name="DEVICE_SEETING_ERROR">数据写入失败</string>
<!--    <string name="BLUE_BUTTON_TEXT">查找设备</string>-->

    <!--  DeviceListActivity -->
    <string name="scanning">查找设备...</string>
    <string name="select_device">选择需要连接的设备</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="none_found">没有发现设备</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">其他可用设备</string>
    <string name="button_scan">查找设备</string>
    <string name="point">.</string>

    <string name="hour_hint">时</string>
    <string name="minute_hint">分</string>
    <string name="second_hint">秒</string>
<!--    警告及提示-->
    <string name="receive_data_too_short">接收字符过短</string>
    <string name="receive_data_lenth_error">接收字符数据长度异常</string>
    <string name="iuput_lenth_error">输入长度错误</string>
    <string name="correct">正确</string>
    <string name="wrong">错误</string>
    <string name="timeout">超时了</string>
    <string name="STU_SETTING_RESULT_OK">数据设置成功</string>

<!--    各个页面title-->
    <string name="stu_i_title1">STU设置</string>
    <string name="stu_i_title2">紧急切断阀状态</string>
    <string name="stu_i_title3">流量仪表设置</string>
    <string name="stu_i_title4">模拟量设置</string>
    <string name="stu_i_title5">可燃气体探测器设置</string>
<!--    STU-I 配置信息参数IDs-->
    <string name="device_describe">产品型号</string>
    <string name="device_firmware">软件版本</string>
    <string name="device_usersID">用户编码</string>
    <string name="device_local_time">本机时间</string>
    <string name="device_wireless_module">无线模块</string>
    <string name="device_connect_parameter">联网参数</string>
    <string name="device_connect_station">服务器地址</string>
    <string name="device_report_type">数据更新配置</string>
    <string name="device_report_freq">上传频率</string>
    <string name="device_report_firm_time">固定时刻</string>

    <string name="device_apn">APN</string>
    <string name="device_apn_username">PPP Username</string>
    <string name="device_apn_password">PPP Password</string>
    <string name="device_station_ip">IP</string>
    <string name="device_station_port">Port</string>

    <string name="device_button_action">读 取</string>
    <string name="device_button_action_write">写入数据</string>
    <string name="device_button_action_CMD">命令执行</string>
    <string name="ANALOG_PARAMETER_ERROR">数据未填充完整</string>

<!-- set-i item setting -->
    <string name="Please_select">请选择</string>
    <string name="Time_set_result">时间设置</string>
    <!--  SSV Setting Fragment information  -->
    <string name="SSV_LINE1">线路 #1</string>
    <string name="SSV_LINE2">线路 #2</string>
    <string name="SSV_STATUS_ON">打开</string>
    <string name="SSV_STATUS_OFF">关闭</string>

    <!--    EVC 相关信息设置-->
    <string name="EVC_COM_SETTING">通信参数设置</string>
    <string name="EVC_Acquisition_SETTING_ITEM">数据扫描时间设置</string>
    <string name="EVC_Acquisition_SETTING">数据扫描时间:</string>
    <string name="EVC_Acquisition_SETTING_STEP">分钟</string>
    <string name="EVC_Acquisition_TYPE_ITEM">仪表</string>
    <string name="EVC_INSTRUMENT_TYPE">仪表类型</string>
    <string name="EVC_INSTRUMENT_ADDRESS">仪表地址</string>
    <string name="EVC_BAUD_RATE">波特率</string>
    <string name="EVC_BAUD_CHECK_BIT">校验位</string>
    <string name="EVC_BAUD_DATA_BIT">数据位</string>
    <string name="EVC_BAUD_STOP_BIT">停止位</string>
    <string name="EVC_CHECK_BIT_EVEN">偶</string>
    <string name="EVC_CHECK_BIT_ODD">奇</string>
    <string name="EVC_CHECK_BIT_NONE">无</string>
    <string name="EVC_COM_FRAG_PLEASE_SELECT">请选择</string>
    <string name="EVC_ADDR_SET_ERROR">仪表地址不能大于256</string>

<!--    analog setting information -->
    <string name="ANALOG_INPUT1">AI1(进口压力)</string>
    <string name="ANALOG_INPUT2">AI2(出口压力)</string>
    <string name="ANALOG_INPUT_LIMITE">压力范围</string>
    <string name="ANALOG_UPPER_LIMITE">上限</string>
    <string name="ANALOG_LOWER_LIMITE">下限</string>
    <string name="ANALOG_SCAN_FREQUENCE">扫描频率</string>
    <string name="ANALOG_Acquisition_FREQUENCE">采集频率</string>
    <string name="UPPER_MUST_BIGGER">高报警必须大于低报警</string>
    
    
<!--    Dialog information setting -->
    <string name="DIALOG_INFORMATION">操作提示</string>
    <string name="DIALOG_ACTION_INFORMATION">单击条目可以进行设置</string>
    <string name="DIALOG_BUTTON_TEXT">确定</string>
    <string name="DIALOG_SELECT_INFO">请选择需要的操作</string>
    <string name="DIALOG_ITEM_READ">读数据</string>
    <string name="DIALOG_ITEM_WRITE">写数据</string>

    <!--    gas alarm setting information-->
    <string name="GAS_DETECT_SETTING_LOW_LIMITE">低报警</string>
    <string name="GAS_DETECT_SETTING_HIGH_LIMITE">高报警</string>
    <string name="GAS_HIGH_MUST_BIGGER">高报警必须大于低报警</string>
    <string name="GAS_SENSOR_TYPE">型号</string>
    <string name="GAS_SENSOR_ALARM_SETTING">报警设置</string>
    <string name="GAS_SCAN_FREQUENCE">扫描频率</string>
    <string name="GAS_Acquisition_FREQUENCE">采集频率</string>


    <string-array name="hour_display">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="minute_display">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="week_display">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
</resources>
