<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:aandroid="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/but_layout_1998"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg1998_lable">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/EVC_COM_SETTING"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_jiantou"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/reg1998_lable">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="9">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_ins_baud_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/EVC_BAUD_RATE"/>
                    <TextView
                        android:id="@+id/tv_ins_baud_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tv_ins_baud_lable"
                        android:layout_toRightOf="@+id/tv_ins_baud_lable"
                        android:layout_centerVertical="true"
                        android:gravity="center_horizontal"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_ins_paritybit_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/EVC_BAUD_CHECK_BIT" />
                    <TextView
                        android:id="@+id/tv_ins_paritybit_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_ins_databit_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/EVC_BAUD_DATA_BIT" />
                    <TextView
                        android:id="@+id/tv_ins_databit_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_ins_stopbit_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/EVC_BAUD_STOP_BIT" />
                    <TextView
                        android:id="@+id/tv_ins_stopbit_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>




        </RelativeLayout>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CFCFCF" />
    <RelativeLayout
        android:id="@+id/but_layout_1999"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ins_1999_lable">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="寄存器 1999"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_jiantou"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tv_ins_1999_lable">
            <TextView
                android:id="@+id/tv_ins_recodegap_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/EVC_Acquisition_SETTING"/>
            <TextView
                android:id="@+id/tv_ins_recodegap_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_ins_recodegap_lable" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_ins_recodegap_value"
                android:text="@string/EVC_Acquisition_SETTING_STEP"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_jiantou"
                />
        </RelativeLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CFCFCF" />

    <RelativeLayout
        android:id="@+id/but_layout_2000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/tv_ins_2000_lable"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/ins_select_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="寄存器:"/>

            <Spinner
                android:id="@+id/ins_select_spiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/ins_select_title" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_jiantou"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <ListView
            android:id="@+id/tv_ins_2000_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ins_2000_lable"
            android:listSelector="@android:color/transparent"
            android:divider="@null"
            ></ListView>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_jiantou"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="0.5dp"
        android:background="#CFCFCF" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/tv_ins_btn_read"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:background="@drawable/round_button"
            android:text="@string/device_button_action"
            android:textColor="#fff" />
    </LinearLayout>
</LinearLayout>
